# hybrid-cosim

./: .gitignore  .gitmodules  Jenkinsfile  README.md
DSL_SemanticAdaptation/: Jenkinsfile  README.md  README.txt  first_generation_sucessful_log.txt  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation/: .project  build.properties  plugin.xml  plugin.xml_gen  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.canonical/: pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.canonical.tests/: pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.chain/: build.properties  plugin.xml  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.cpp/: build.properties  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.cpp.lib/: pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.cpp.tests/: pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.cpp.tests/test_input/single_folder_spec/lazy/FMI_controller/: .cproject  CMakeLists.txt  build.ps1  msys-toolchain.cmake  sc_types.h
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.cg.cpp.tests/test_input/single_folder_spec/lazy/FMI_controller/sources/: Powerwindow.c  test.c
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.ide/: .project  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.log/: build.properties  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.testframework/: plugin.xml  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.tests/: .project  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.tests/input/: controller_sa.sa  plant.sa  powerwindow.sa  powerwindow_algebraic_loop_delay.sa  powerwindow_algebraic_loop_delay_BASE.sa  powerwindow_algebraic_loop_iteration.sa  powerwindow_algebraic_loop_iteration_BASE.sa  powerwindow_controller_delay.sa  powerwindow_controller_delay_BASE.sa  powerwindow_model_only.sa  powerwindow_multi_rate.sa  powerwindow_multi_rate_BASE.sa  test1.sa  window_obstacle_sa_loop_BASE.sa  window_obstacle_sa_loop_BASE_new.sa  window_obstacle_sa_multirate_BASE.sa  window_obstacle_sa_multirate_BASE_new.sa  window_sa_BASE.sa
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.tests/oracles/: test1.txt
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.ui/: .project  plugin.properties  plugin.xml  plugin.xml_gen  pom.xml
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation.ui.tests/: .project
DSL_SemanticAdaptation/be.uantwerpen.ansymo.semanticadaptation/examples/: DEPRECATED.txt  algorithm.c  algorithm.txt  controller_sa.BASE.sa  controller_sa_canonical.BASE.sa  controller_sa_canonical_generated_algorithm.sa  power.BASE.sa  power_canonical.BASE.sa  power_canonical_generated_algorithm.sa  sample.BASE.sa  scenario.sa  sketch.BASE.sa  window_obstacle_sa.BASE.sa  window_sa.BASE.sa  (+4 more)
DSL_SemanticAdaptation/features/: pom.xml
DSL_SemanticAdaptation/platform/: build.properties  plugin.properties  plugin.xml  pom.xml
DSL_SemanticAdaptation/product/: pom.xml  sa.product  saCli.product
DSL_SemanticAdaptation/repository/: category.xml  pom.xml
ModelicaModels/: NoObstacle_Test.mo  Obstacle.mo  PW_PowerSystem.mo  PW_PowerSystem_Test.mo  PW_Window.mo  PowerAndWindowSystem.mo  PowerAndWindowSystem_Test.mo  PowerSystem.mo  PowerSystemStandAlone.mo  PowerSystem_Test.mo  StategraphSample.mo  StategraphSampletest.mo  UncontrolledScenario.mo  Window.mo  plot_results.r
ModelicaModels/BuggyModels/: Echo.mo  PW_PowerSystem.mo
ModelicaModels/Dymola/: Obstacle.mo  Power.mo  Window.mo  dsin.txt  dslog.txt
SemanticAdaptationForFMI/FMIAbstraction/: .project
examples/: in or outrules.txt
(+622 files in other folders)
